rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t417_1993_Raster-Gr-Coding-Attributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t417_1993_Raster-Gr-Coding-Attributes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod raster_gr_coding_attributes {
    extern crate alloc;
    use super::raster_gr_presentation_attributes::CoordinatePair;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "Bits-Per-Colour-Component")]
    pub enum BitsPerColourComponent {
        #[rasn(identifier = "single-integer")]
        single_integer(Integer),
        #[rasn(identifier = "component-list")]
        component_list(SequenceOf<Integer>),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Compression(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set, identifier = "Raster-Gr-Coding-Attributes")]
    pub struct RasterGrCodingAttributes {
        #[rasn(tag(context, 0), identifier = "number-of-pels-per-line")]
        pub number_of_pels_per_line: Option<Integer>,
        #[rasn(tag(context, 1), identifier = "number-of-lines")]
        pub number_of_lines: Option<Integer>,
        #[rasn(tag(context, 2))]
        pub compression: Option<Compression>,
        #[rasn(tag(context, 3), identifier = "number-of-discarded-pels")]
        pub number_of_discarded_pels: Option<Integer>,
        #[rasn(tag(context, 4), identifier = "bits-per-colour-component")]
        pub bits_per_colour_component: Option<BitsPerColourComponent>,
        #[rasn(tag(context, 5), identifier = "interleaving-format")]
        pub interleaving_format: Option<Integer>,
        #[rasn(tag(context, 6), identifier = "number-of-pels-per-tile-line")]
        pub number_of_pels_per_tile_line: Option<Integer>,
        #[rasn(tag(context, 7), identifier = "number-of-lines-per-tile")]
        pub number_of_lines_per_tile: Option<Integer>,
        #[rasn(tag(context, 8), identifier = "tiling-offset")]
        pub tiling_offset: Option<CoordinatePair>,
        #[rasn(tag(context, 9), identifier = "tile-types")]
        pub tile_types: Option<SequenceOf<TileType>>,
        #[rasn(tag(context, 10))]
        pub subsampling: Option<Subsampling>,
        #[rasn(tag(context, 11), identifier = "jpeg-coding-mode")]
        pub jpeg_coding_mode: Integer,
        #[rasn(tag(context, 12), identifier = "jpeg-quantization-table")]
        pub jpeg_quantization_table: Option<Integer>,
        #[rasn(tag(context, 13), identifier = "jpeg-huffman-table")]
        pub jpeg_huffman_table: Integer,
        #[rasn(tag(context, 17), identifier = "jbig-differential-layer")]
        pub jbig_differential_layer: Option<Integer>,
        #[rasn(tag(context, 18), identifier = "number-of-lines-per-stripe")]
        pub number_of_lines_per_stripe: Option<Integer>,
    }
    impl RasterGrCodingAttributes {
        pub fn new(
            number_of_pels_per_line: Option<Integer>,
            number_of_lines: Option<Integer>,
            compression: Option<Compression>,
            number_of_discarded_pels: Option<Integer>,
            bits_per_colour_component: Option<BitsPerColourComponent>,
            interleaving_format: Option<Integer>,
            number_of_pels_per_tile_line: Option<Integer>,
            number_of_lines_per_tile: Option<Integer>,
            tiling_offset: Option<CoordinatePair>,
            tile_types: Option<SequenceOf<TileType>>,
            subsampling: Option<Subsampling>,
            jpeg_coding_mode: Integer,
            jpeg_quantization_table: Option<Integer>,
            jpeg_huffman_table: Integer,
            jbig_differential_layer: Option<Integer>,
            number_of_lines_per_stripe: Option<Integer>,
        ) -> Self {
            Self {
                number_of_pels_per_line,
                number_of_lines,
                compression,
                number_of_discarded_pels,
                bits_per_colour_component,
                interleaving_format,
                number_of_pels_per_tile_line,
                number_of_lines_per_tile,
                tiling_offset,
                tile_types,
                subsampling,
                jpeg_coding_mode,
                jpeg_quantization_table,
                jpeg_huffman_table,
                jbig_differential_layer,
                number_of_lines_per_stripe,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Subsampling(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "Tile-Type")]
    pub struct TileType(pub Integer);
}
