rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t418_1993_Geo-Gr-Coding-Attributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t418_1993_Geo-Gr-Coding-Attributes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod geo_gr_coding_attributes {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set, identifier = "Geo-Gr-Coding-Attributes")]
    pub struct GeoGrCodingAttributes {}
    impl GeoGrCodingAttributes {
        pub fn new() -> Self {
            Self {}
        }
    }
    impl std::default::Default for GeoGrCodingAttributes {
        fn default() -> Self {
            Self {}
        }
    }
}
