rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t419_1995_Audio-Coding-Attributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t419_1995_Audio-Coding-Attributes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod audio_coding_attributes {
    extern crate alloc;
    use super::document_profile_descriptor::CharacterData;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "  see ITU-T Rec. T.415 | ISO/IEC 8613-5"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set, identifier = "Audio-Coding-Attributes")]
    pub struct AudioCodingAttributes {
        #[rasn(tag(context, 0))]
        pub marker: Option<SequenceOf<Marker>>,
    }
    impl AudioCodingAttributes {
        pub fn new(marker: Option<SequenceOf<Marker>>) -> Self {
            Self { marker }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum MarkerMarkerLabel {
        #[rasn(tag(context, 0), identifier = "unique-label")]
        unique_label(ObjectIdentifier),
        #[rasn(tag(context, 1))]
        description(CharacterData),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct Marker {
        #[rasn(tag(context, 0), identifier = "time-offset")]
        pub time_offset: Integer,
        #[rasn(identifier = "marker-label")]
        pub marker_label: MarkerMarkerLabel,
    }
    impl Marker {
        pub fn new(time_offset: Integer, marker_label: MarkerMarkerLabel) -> Self {
            Self {
                time_offset,
                marker_label,
            }
        }
    }
}
