rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t419_1995_Audio-Document-Profile-Attributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t419_1995_Audio-Document-Profile-Attributes.asn1
---
Warnings:
NotYetInplemented generating bindings for : Real types are currently unsupported!


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod audio_document_profile_attributes {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
