rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t419_1995_Audio-Profile-Attributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t419_1995_Audio-Profile-Attributes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod audio_profile_attributes {
    extern crate alloc;
    use super::audio_presentation_attributes::AudioAttributes;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "  no audio non-basic features are defined in this"]
    #[doc = "  Recommendation | International Standard"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate, identifier = "Audio-Coding-Attribute")]
    pub struct AudioCodingAttribute(pub ());
    #[doc = "  no audio non-basic coding attributes are defined in this"]
    #[doc = "  Recommendation | International Standard"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "Audio-Content-Defaults")]
    pub struct AudioContentDefaults(pub AudioAttributes);
    #[doc = "  see 11.3"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate, identifier = "Audio-Presentation-Feature")]
    pub struct AudioPresentationFeature(pub ());
}
