rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t422_1995_External-References.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t422_1995_External-References.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod external_references {
    extern crate alloc;
    use super::dor_definition::*;
    use super::information_framework::DistinguishedName;
    use super::location_expressions::LocationExpression;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "Associated-Information-Name")]
    pub struct AssociatedInformationName {
        #[rasn(tag(context, 0))]
        pub string: PrintableString,
        #[rasn(tag(context, 1), identifier = "object-id")]
        pub object_id: Option<ObjectIdentifier>,
    }
    impl AssociatedInformationName {
        pub fn new(string: PrintableString, object_id: Option<ObjectIdentifier>) -> Self {
            Self { string, object_id }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "External-Entity")]
    pub enum ExternalEntity {
        #[rasn(tag(context, 0), identifier = "external-info")]
        external_info(ExternalInformationName),
        #[rasn(tag(context, 1), identifier = "object-id")]
        object_id(ObjectIdentifier),
        #[rasn(tag(context, 2))]
        dor(DOR),
        #[rasn(tag(context, 3))]
        distinguished(DistinguishedName),
        #[rasn(tag(context, 4), identifier = "associated-info")]
        associated_info(AssociatedInformationName),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "External-Information-Name")]
    pub struct ExternalInformationName {
        #[rasn(tag(context, 0))]
        pub string: PrintableString,
        #[rasn(tag(context, 1), identifier = "object-id")]
        pub object_id: Option<ObjectIdentifier>,
    }
    impl ExternalInformationName {
        pub fn new(string: PrintableString, object_id: Option<ObjectIdentifier>) -> Self {
            Self { string, object_id }
        }
    }
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set, identifier = "SET")]
    pub struct AnonymousExternalReferencesList {
        #[rasn(tag(context, 1), identifier = "reference-name")]
        pub reference_name: ReferenceName,
        #[rasn(tag(context, 2), identifier = "external-entity")]
        pub external_entity: ExternalEntity,
        #[rasn(tag(context, 3), identifier = "location-rule")]
        pub location_rule: Option<LocationExpression>,
    }
    impl AnonymousExternalReferencesList {
        pub fn new(
            reference_name: ReferenceName,
            external_entity: ExternalEntity,
            location_rule: Option<LocationExpression>,
        ) -> Self {
            Self {
                reference_name,
                external_entity,
                location_rule,
            }
        }
    }
    #[doc = "  see ITU-T Rec. X.501 ¦ ISO/IEC 9594-2"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "External-References-List")]
    pub struct ExternalReferencesList(pub SetOf<AnonymousExternalReferencesList>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "Reference-Name")]
    pub struct ReferenceName(pub PrintableString);
}
